Prevent infobar buttons title color from changing when disabled

BUG=681538
R=jif@chromium.org

Review-Url: https://codereview.chromium.org/2649043008
Cr-Commit-Position: refs/heads/master@{#446031}

Former-commit-id: 76b2a485c54fb25c8a0fe271033715899c41a83c